--- a/.github/workflows/auto-change-pr-base.yml
+++ b/.github/workflows/auto-change-pr-base.yml
@@ -6,7 +6,7 @@ name: Auto-change PR Base to Develop
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request:
-    types: [ "opened", "edited", "reopened" ]
+    types: ["opened", "edited", "reopened"]
 
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
@@ -21,32 +21,18 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Change PR base to develop
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
-            if (context.payload.pull_request.base.ref === 'develop' || context.payload.pull_request.base.ref === 'hotfix') {
-              console.log("No change needed.");
-              return;
-            }
+            const { default: autoChangePrBase} = await import('${{github.workspace}}/.github/workflows/auto-change-pr-base.js')
+            await autoChangePrBase()
 
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-            const pull_number = context.payload.pull_request.number;
-
-            await github.rest.pulls.update({
-              owner,
-              repo,
-              pull_number,
-              base: 'develop'
-            });
-
-            console.log(`Changed base branch of PR #${pull_number} to 'develop'`);
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       # - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
       # - name: Run a one-line script
-        # run: echo Hello, world!
+      # run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
       # - name: Run a multi-line script
