--- a/.github/workflows/auto-change-pr-base.yml
+++ b/.github/workflows/auto-change-pr-base.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { default: autoChangePrBase } = await import('./auto-change-pr-base.js')
+            const { default: autoChangePrBase } = await import('${{ github.workspace }}/.github/workflows/auto-change-pr-base.js')
             await autoChangePrBase()
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
