--- a/.github/workflows/auto-change-pr-base.yml
+++ b/.github/workflows/auto-change-pr-base.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           script: |
             const { default: autoChangePrBase } = await import('${{ github.workspace }}/.github/workflows/auto-change-pr-base.js')
-            await autoChangePrBase()
+            await autoChangePrBase({context, github})
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       # - uses: actions/checkout@v3
