--- a/.github/workflows/auto-change-pr-base.yml
+++ b/.github/workflows/auto-change-pr-base.yml
@@ -24,8 +24,28 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { default: autoChangePrBase } = await require('${{ github.workspace }}/.github/workflows/auto-change-pr-base.js')
-            await autoChangePrBase({context, github})
+            const pullRequest = context.payload.pull_request;
+            const pull_number = pullRequest?.number;
+            const headBranch = pullRequest?.head.ref;
+            const baseBranch = pullRequest?.base.ref;
+
+            if (
+              pull_number == undefined ||
+              baseBranch !== "main" ||
+              ["develop", "hotfix"].includes(headBranch)
+            ) {
+              console.log("No change needed for the base branch");
+              return;
+            }
+
+            await github.rest.pulls.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: pull_number,
+              base: "develop", // Change the base branch to 'develop'.
+            });
+
+            console.log("Base branch changed to 'develop'");
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       # - uses: actions/checkout@v3
