--- a/.github/workflows/auto-change-pr-base.yml
+++ b/.github/workflows/auto-change-pr-base.yml
@@ -23,29 +23,10 @@ jobs:
       - name: Change PR base to develop
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const pullRequest = context.payload.pull_request;
-            const pull_number = pullRequest?.number;
-            const headBranch = pullRequest?.head.ref;
-            const baseBranch = pullRequest?.base.ref;
-
-            if (
-              pull_number == undefined ||
-              baseBranch !== "main" ||
-              ["develop", "hotfix"].includes(headBranch)
-            ) {
-              console.log("No change needed for the base branch");
-              return;
-            }
-
-            await github.rest.pulls.update({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pull_number,
-              base: "develop", // Change the base branch to 'develop'.
-            });
-
-            console.log("Base branch changed to 'develop'");
+            const script = require("./auto-change-pr-base.js");
+            script({ context, github });
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       # - uses: actions/checkout@v3
